<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_play_list"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/my_playlist" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_newly_added"
            android:icon="@drawable/ic_new_releases_black_24dp"
            android:title="@string/newly_added" />
        <item
            android:id="@+id/nav_most_played"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/most_played" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/subscription"
                android:icon="@drawable/ic_subscriptions_black_24dp"
                android:title="@string/subscription" />
        </menu>
    </item>

</menu>
